<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/back">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chat_title"
        android:id="@+id/chat"
        android:textColor="@drawable/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N"
        android:id="@+id/back"
        android:layout_alignTop="@+id/chat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chat_cancel"
        android:id="@+id/cancel"
        android:layout_below="@+id/back"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chat_message"
        android:id="@+id/nm"
        android:layout_below="@+id/chat"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chat_send"
        android:id="@+id/sendtext"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/nm"
  />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/line1" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/chat_to"
    android:layout_below="@+id/line1"
    android:layout_margin="10dp"
    android:id="@+id/to"
    />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/to"
        android:background="@drawable/white"
        android:id="@+id/lineto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_cc"
        android:layout_below="@+id/lineto"
        android:layout_margin="10dp"
        android:id="@+id/cc"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/cc"
        android:background="@drawable/white"
        android:id="@+id/linecc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_subject"
        android:layout_below="@+id/linecc"
        android:layout_margin="10dp"
        android:id="@+id/subject"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/subject"
        android:background="@drawable/white"
        android:id="@+id/linesub" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editto"
        android:background="@null"
        android:layout_alignBottom="@+id/lineto"
        android:layout_alignLeft="@+id/editcc"
        android:layout_alignStart="@+id/editcc" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editcc"
        android:layout_below="@+id/lineto"
        android:layout_toRightOf="@+id/cc"
        android:layout_toEndOf="@+id/cc"
        android:background="@null"
        android:layout_margin="10dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editsub"
        android:layout_below="@+id/linecc"
        android:layout_toRightOf="@+id/subject"
        android:layout_toEndOf="@+id/subject"
        android:background="@null"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content"
        android:layout_below="@+id/linesub"
        android:layout_margin="10dp"
        android:layout_alignParentLeft="true"
        android:background="@null"/>

</RelativeLayout>